<resources>
    <string name="app_name">Quiz Application</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quiz_title">Quiz title</string>
    <string name="quiz_description">Quiz Description</string>
    <string name="difficulty">Difficulty</string>
    <string name="total_questions">Total Questions</string>
    <string name="your_last_score">Your last score</string>
    <string name="n_a">N/A</string>
    <string name="start_quiz">Start Quiz</string>
</resources>
