<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.DetailsFragment">

    <ImageView
        android:id="@+id/image_quiz_details"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:src="@drawable/ic_placeholder_image"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/title_quiz_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/work_sans"
        android:text="@string/quiz_title"
        android:textColor="@color/colorAccent"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_quiz_details" />

    <TextView
        android:id="@+id/description_quiz_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:fontFamily="@font/work_sans"
        android:text="@string/quiz_description"
        android:textColor="@color/textColorDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_quiz_details" />

    <TextView
        android:id="@+id/difficulty_heading_quiz_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/difficulty"
        android:fontFamily="@font/work_sans"
        android:textColor="@color/textColorLight"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_quiz_details" />

    <TextView
        android:id="@+id/total_questions_heading_quiz_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/total_questions"
        android:fontFamily="@font/work_sans"
        android:textColor="@color/textColorLight"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficulty_heading_quiz_details" />

    <TextView
        android:id="@+id/last_score_heading_quiz_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/your_last_score"
        android:fontFamily="@font/work_sans"
        android:textColor="@color/textColorLight"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_questions_heading_quiz_details" />

    <TextView
        android:id="@+id/difficulty_text_quiz_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/n_a"
        android:fontFamily="@font/work_sans"
        android:textColor="@color/textColorLight"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/difficulty_heading_quiz_details" />

    <Button
        android:id="@+id/start_button_quiz_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/start_quiz"
        android:background="@drawable/primary_button_background"
        android:textColor="@color/white"
        android:fontFamily="@font/work_sans"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/total_questions_text_quiz_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/n_a"
        android:fontFamily="@font/work_sans"
        android:textColor="@color/textColorLight"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficulty_text_quiz_details" />

    <TextView
        android:id="@+id/last_score_text_quiz_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/n_a"
        android:fontFamily="@font/work_sans"
        android:textColor="@color/textColorLight"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_questions_text_quiz_details" />

</androidx.constraintlayout.widget.ConstraintLayout>